[package]
name = "wgpu-study"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"]}
cgmath = "0.18.0"
pollster = "0.3.0"
wgpu = "22.1.0"
winit = "0.30.5"

[dependencies.image]
version = "0.25.4"
default-features = false
features = ["png", "jpeg"]
